# task_list

./: .gitignore  database.py  docker-compose.yml  main.py  pyproject.toml  task.db
alembic/: env.py
alembic/versions/: 2025_03_07_1030-115e27a0851a_create_table_users.py  2025_03_07_1036-745f46edadc5_create_tabkes_task_and_tag.py  2025_03_07_1042-74919e492df5_create_many_to_many_relationship_and_.py
auth/: utils.py
crud/: __init__.py  tag.py  task.py  task_tag.py  user.py
demo_auth/: __init__.py  demo_jwt_auth.py
models/: __init__.py  associations.py  base.py  tag.py  task.py  user.py
routers/: __init__.py  tag.py  task.py  task_tag.py  user.py
schemas/: __init__.py  tag.py  task.py  user.py
